# figeno

./: .gitignore  MANIFEST.in  README.md  main.py  pyproject.toml
.github/workflows/: python-package.yml  tests.yml
docs/: conf.py  index.rst  requirements.txt
docs/content/: describe_figure.rst  examples.rst  installation.rst  tracks.rst  usage.rst
docs/content/tracks/: HiC.rst  alignments.rst  bigwig.rst  chr_axis.rst  coverage.rst  genes.rst
figeno/: __init__.py  ase.py  bam.py  figeno.py  figenomake.py  genes.py  misc.py  track_HiC.py  track_alignments.py  track_ase.py  track_basemodfreq.py  track_bed.py  track_bigwig.py  track_chr.py  track_cli.py  track_copynumber.py  track_coverage.py  track_genes.py  track_hic.py  track_metfreq.py  track_sv.py  tracks_HiC.py  tracks_alignments.py  tracks_ase.py  tracks_bed.py  tracks_bigwig.py  tracks_chr.py  tracks_cli.py  tracks_copynumber.py  tracks_coverage.py  tracks_genes.py  tracks_metfreq.py  tracks_plot.py  tracks_sv.py  tracks_utils.py  utils.py  vcf.py
figeno/GUI/: gui.py  gui_colors.py  gui_regions.py  gui_tracks.py  gui_utils.py
figeno/cli/: cli.py  gui.py  init.py  make.py
figeno/data/: .~lock.hg19_cytobands.tsv#  hg19_chrarms.txt  hg38_chrarms.txt  hg38_cytobands.tsv  mm10_cytobands.tsv
figeno/gui/: gui.py  gui_browser.py  gui_server.py  gui_webview.py  package-lock.json  package.json
figeno/gui/public/: index.html  manifest.json
figeno/gui/src/: App.js  Basemod.jsx  ColorButton.jsx  DndContainer.jsx  DndItem.jsx  FileDialog.jsx  GeneSelector.jsx  GeneralContainer.jsx  Highlight.jsx  HighlightsContainer.jsx  LoadingScreen.jsx  OutputContainer.jsx  Region.jsx  RegionsContainer.jsx  TemplatePanel.jsx  Track.jsx  TrackTypePanel.jsx  TracksContainer.jsx  style.css  useClickOutside.js
pyinstaller/: figeno.spec  main.py
test_data/: GDM1_config.json  GDM1_splitread_config.json  GDM1_subset.bam.bai  LNCaP_ENCFF282KWR_subset.bigwig  LNCaP_config.json  LNCaP_subset_hg38.cool  README.md  THP1_CNVs  THP1_SV.vcf  THP1_circos_config.json  THP1_symmetrical_config.json  delly_CNAs.bed  purple_cn.tsv
tests/: test_figeno.py
