[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["figeno", "figeno.data", "figeno.cli", "figeno.gui"]



[project]
name = 'figeno'
version = "1.6.1"
description = 'Package for generating genomics figures.'
readme = 'README.md'
authors = [
  { name = 'Etienne Sollier'},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
requires-python = '>=3.7'
dependencies = [
  "numpy>=1.10.0,<2.0",
  "pandas>=1.3.0",
  "matplotlib>=3.4.3",
  "importlib-resources>=5.0.0",
  "pysam>=0.16.0",
  "pyBigWig>=0.3.18",
  "vcfpy>=0.13.5",
  "cooler>=0.9.1",
  "Flask>=2.2.5",
  "filedialpy>=1.2.0",
  "pywebview>=4.4.1"
]

[project.scripts]
figeno = "figeno.cli.cli:main"

[project.urls]
"Homepage" = "https://github.com/CompEpigen/figeno"
